<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.udacity.shoestore.InstructionFragment">

            <TextView
                android:id="@+id/textView_instruction"
                style="@style/whiteBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"
                android:textColor="#039BE5"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView_instruction_description"
                style="@style/whiteBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:text="@string/buying_shoes"
                android:textColor="#039BE5"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_next"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>
</layout>