<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.udacity.shoestore.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">


        <TextView
            android:id="@+id/shoe_name_label"
            style="@style/whiteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_company_label"
            style="@style/whiteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_company"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeCompany"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_size_label"
            style="@style/whiteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeSize"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_description_label"
            style="@style/whiteBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_description"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextShoeName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextShoeCompany"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={viewmodel.shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_company_label"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />

        <EditText
            android:id="@+id/editTextShoeSize"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={`` + viewmodel.shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeCompany" />

        <EditText
            android:id="@+id/editTextShoeDescription"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={viewmodel.shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel"
            android:theme="@style/Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            android:theme="@style/Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>